app/simple-chat-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-chat-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-chat-app
  template:
    metadata:
      labels:
        app: simple-chat-app
    spec:
      containers:
      - name: my-container
        image: oyinlola101/simple-chat-app:v1
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: my-chat-app-service
spec:
  selector:
    app: simple-chat-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
